--- a/BoostCamp1/app/build.gradle
+++ b/BoostCamp1/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.0.+'
     compile 'com.jakewharton:butterknife:8.6.0'
+
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
 }
+
